--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-bg.jpg") center center no-repeat;
   background-size: cover;
   position: relative;
 }
