Add media Query for profile pic mobile, Add wordpress site to prtfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -629,6 +629,14 @@ section {
 height: auto;
 }
 
+@media (max-width: 1024px) {
+  .about .image {
+    background: url("../img/me.jpg") no-repeat center;
+    background-size: 60%;
+    
+  
+  }
+}
 
 
 /*--------------------------------------------------------------
